@@ -3,6 +3,8 @@
 
 Kodi kiegészítő a Mozikatalogus-hoz
 
+1.0.3 - os verzió kiszedése
+
 1.0.2 - os, kodi, addon verziószám írása a logba
 
 1.0.1 - kategóriák, kereső bővítése
